# task_manager

./: .codacy.yml  .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .pylintrc  .release-please-manifest.json  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CODACY_SETUP.md  Dockerfile  Dockerfile.pwa  INSTALLATION.md  MIGRATION_README.md  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  README_Telegram_Backup.md  TASKIQ_SETUP.md  create_indexes.sql  docker-compose.prod.yml  docker-compose.pwa.yaml  docker-compose.yaml  docker-compose.yml  eslint.config.js  manage.py  mikrotik_backup_telegram.rsc  mikrotik_backup_telegram_advanced.rsc  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  requirements.txt  setup.cfg  simple_test.py  tasks.json  test_sync_only.py
.github/workflows/: android-apk.yml  ci-docker-compose.yml  ci.yml  docker-publish.yml  pwa-build.yml  release-please.yml  semgrep.yml  task-manager.yml  task_manager.yml  task_menager_new.yml
android/: .gitignore  CHANGELOG.md  Dockerfile  build.gradle.kts  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper  gradle-wrapper.bat
backend/: Dockerfile  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/src/config/: asgi.py  celery.py  settings.py  urls.py
backend/src/kanban/: admin.py  apps.py  board_templates.py  broadcast.py  consumers.py  health.py  inbox.py  models.py  notifications.py  reminders.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/src/kanban/management/commands/: normalize_positions.py
backend/src/kanban/migrations/: 0001_initial.py  0002_column_icon.py  0003_card_deadline_estimate.py  0004_card_extra_fields.py  0004_card_tags_categories_models.py  0004_rename_kanban_car_column_p_idx_kanban_card_column__f189d9_idx_and_more.py  0005_merge_20260205_1349.py  0006_merge_20260205_1410.py  0007_notifications.py  0008_rename_kanban_noti_status_6a4db9_idx_kanban_noti_status_5a4a41_idx_and_more.py  0009_notificationevent_dedupe_key.py  0010_card_deadline_reminders.py  0011_remove_card_estimate.py  0012_multi_deadline_reminders.py  0013_board_notification_contacts.py  0014_notification_push_channel.py  0015_rename_kanban_cardd_status_3a87b9_idx_kanban_card_status_916681_idx_and_more.py  0016_sitesettings_column_is_default.py  0017_column_is_done.py  0018_normalize_default_columns.py  0019_notificationprofile_timezone_configured.py  0020_card_priority_int.py  0021_label_consolidation.py  0022_simplify_user_roles.py  0023_drop_board_notification_contacts.py  0024_board_inbox.py  0025_archive_soft_delete.py  0026_search_trigram_indexes.py  0027_board_icon_color.py  0028_checklist_items.py  0029_board_archive.py  0030_card_subtasks.py  0031_recurrence_rules.py  0032_card_comments.py  0033_card_activity.py  0034_card_query_indexes.py  0035_normalize_attachments.py  0036_rename_kanban_att_card_id_1b22c6_idx_kanban_atta_card_id_094604_idx_and_more.py  0037_add_recurrencerule_bysetpos.py  0038_remove_generated_card_recurrences.py  (+7 more)
backend/src/kanban/serializers_pkg/: __init__.py  boards.py  cards.py  columns.py  notifications.py  site_settings.py  users.py
backend/src/kanban/views/: __init__.py  archive.py  auth.py  boards.py  cards.py  columns.py  inbox.py  notifications.py  search.py  site_settings.py  users.py
backend/tests/: conftest.py  test_archive.py  test_auth.py  test_board_api.py  test_board_templates.py  test_broadcast.py  test_card_explicit_notifications.py  test_card_move.py  test_card_positioning.py  test_cards.py  test_checklist.py  test_columns.py  test_health.py  test_inbox.py  test_notification_inbox.py  test_notification_preferences.py  test_overdue_reminders.py  test_recurrence_and_reminders.py  test_search.py
celery/: __init__.py
celery_stub/: exceptions.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/e2e/: board-smoke.spec.ts  helpers.ts
frontend/public/: OneSignalSDKWorker.js
frontend/src/: App.tsx  index.css  main.tsx  react-onesignal.d.ts  useBoardWebSocket.ts  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/app/: AppPlaceholderPage.tsx  AppShell.tsx  CommandPalette.tsx  NotificationInboxButton.tsx  ProtectedRoute.tsx  auth.ts  preferences.ts  queryClient.ts  theme.ts
nginx/: nginx.conf  pwa.conf
pwa-preview/pr-161/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js
pwa-preview/pr-161/assets/: NOTICES
scripts/: check_celery.py  check_taskiq.py  simple_taskiq_test.py  sync_android_version.py  sync_version.py
task_manager/: __init__.py  celery.py  constants.py  context_processors.py  middleware.py  settings.py  taskiq.py  urls.py
task_manager/api/: urls.py
task_manager/fixtures/: tasks.yaml  users.yaml
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py  __init__.py
task_manager/management/commands/: optimize_static.py  test_celery.py  test_taskiq.py
task_manager/nginx/: nginx.conf
task_manager/static/css/: main.css  style.css  style.min.css
task_manager/static/js/: checklist.js  color-theme.js  font-loader.js  kanban.js  labels.js  logout-button.js  modal.js  script.js  script.min.js  task-detail.js
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  apis.py  apps.py  example_tasks.py  forms.py  models.py  permissions.py  serializers.py  services.py  tasks.py  test_views.py  tests.py  urls.py  views.py
task_manager/templates/: 403.html  base-compact.html  base.html  header-compact.html  header.html  index.html
task_manager/users/: admin.py  apis.py  apps.py  bot.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  webhooks.py
tests/: test_performance.py
(+220 files in other folders)
