[tool.poetry]
name = "Task-Manager"
version = "0.1.0"
description = ""
authors = ["TurtleOld <shurpo.alexander@gmail.com>"]
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.11"
gunicorn = ">=23.0.0"
Django = ">=5.1.2"
python-dotenv = ">=1.0.1"
dj-database-url = ">=0.5.0"
psycopg2-binary = ">=2.9.3"
whitenoise = ">=6.1"
django-filter = ">=24.3"
django-bootstrap4 = ">=22.1"
rollbar = ">=0.16.2"
daphne = ">=4.1.2"
twisted = {extras = ["http2", "tls"], version = ">=22.2.0"}
pytelegrambotapi = ">=4.23.0"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
eventlet = "^0.37.0"
django-htmx = "^1.21.0"
transliterate = "^1.10.2"

pillow = "^11.0.0"
[tool.poetry.dev-dependencies]
flake8 = ">=4.0.1"
PyYAML = ">=6.0"
Faker = ">=13.7.0"
coverage = ">=6.3.2"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
ruff = "^0.7.1"
django-stubs = "^5.1.1"

mypy = "^1.13.0"
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    "migrations",
    ".venv",
    ".git"
]

[mypy]
module = 'django.*'
ignore_missing_imports = true

[tool.mypy]
plugins = ['mypy_django_plugin.main']

[tool.django-stubs]
django_settings_module = 'task_manager.settings'

[tool.black]
line-length = 80
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | migrations/.*
    /(
      | migrations
    )/
    /(
        | bootstrap
    )
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"