[tool.poetry]
name = "Task-Manager"
version = "0.1.0"
description = ""
authors = ["TurtleOld <shurpo.alexander@gmail.com>"]
packages = [
    { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.11"
gunicorn = ">=23.0.0"
Django = ">=5.1.2"
python-dotenv = ">=1.0.1"
dj-database-url = ">=0.5.0"
psycopg2-binary = ">=2.9.3"
whitenoise = ">=6.1"
django-filter = ">=24.3"
rollbar = ">=0.16.2"
daphne = ">=4.1.2"
twisted = {extras = ["http2", "tls"], version = ">=22.2.0"}
pytelegrambotapi = ">=4.23.0"
flower = "^2.0.1"
eventlet = "^0.37.0"
django-htmx = "^1.21.0"
transliterate = "^1.10.2"
pillow = "^11.0.0"
celery = {extras = ["amqp"], version = "^5.4.0"}
django-crispy-forms = "^2.3"

crispy-bulma = "^0.11.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
[tool.poetry.dev-dependencies]
flake8 = ">=4.0.1"
PyYAML = ">=6.0"
Faker = ">=13.7.0"
coverage = ">=6.3.2"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
ruff = "^0.7.1"
mypy = "^1.13.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
pylint = "^3.3.1"

django-extensions = "^4.1"
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "htmlcov",
    "**/migrations/*",
    "_build",
    "build",
    "dist",
    "images",
    "media",
    "node_modules",
    "venv",
]

[tool.black]
line-length = 80
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | migrations/.*
    /(
      | migrations
    )/
    /(
        | bootstrap
    )
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"